# hiel_excel_mcp

./: .coverage  .gitlab-ci.yml  LICENSE  README.md  README_ULTIMATE.md  USAGE_GUIDE.md  __init__.py  __main__.py  claude_desktop_config.json  coverage.xml  debug_mcp.py  mcp_config.json  pyproject.toml  run_server.sh  server.py
.github/workflows/: build.yml
core/: README_workbook_context.md  __init__.py  accuracy_validator.py  base_tool.py  config.py  error_handler.py  memory_optimizer.py  monitoring.py  performance_optimizer.py  transport_manager.py  utils.py  validation.py  workbook_context.py
deploy/: Dockerfile  docker-compose.yml  kubernetes.yaml
scripts/: install.py
tests/: __init__.py  test_advanced_manager.py  test_analysis_manager.py  test_batch_manager.py  test_cell_manager.py  test_data_manager.py  test_formatting_manager.py  test_formula_manager.py  test_import_export_manager.py  test_monitoring.py  test_package_structure.py  test_system_manager.py  test_transport_layer.py  test_validation_manager.py  test_workbook_context.py  test_workbook_context_integration.py  test_workbook_manager.py  test_worksheet_manager.py
tools/: __init__.py  advanced_manager.py  analysis_manager.py  batch_manager.py  cell_manager.py  data_manager.py  formatting_manager.py  formula_manager.py  import_export_manager.py  system_manager.py  validation_manager.py  workbook_manager.py  worksheet_manager.py
