[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hiel-excel-mcp"
version = "1.0.0"
description = "Advanced Excel MCP Server with comprehensive tools, security, and performance optimizations"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Hiel Excel MCP Team" }
]
keywords = ["excel", "mcp", "ai", "agent", "openpyxl", "fastmcp", "security", "performance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Security",
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.10.1",
    "fastmcp>=2.0.0,<3.0.0",
    "openpyxl>=3.1.5",
    "typer[all]>=0.16.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "Pillow>=10.0.0",
    "uvicorn[standard]>=0.24.0",
    "psutil>=5.9.0",
    "aiohttp>=3.8.0",
    "websockets>=11.0.0",
    "prometheus-client>=0.17.0",
    "asyncio>=3.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/hiel-excel-mcp/hiel-excel-mcp"
Repository = "https://github.com/hiel-excel-mcp/hiel-excel-mcp"
Issues = "https://github.com/hiel-excel-mcp/hiel-excel-mcp/issues"

[project.scripts]
hiel-excel-mcp = "hiel_excel_mcp.__main__:main"

[project.entry-points."uvx.commands"]
hiel-excel-mcp = "hiel_excel_mcp.__main__:main"

[project.entry-points."mcp.servers"]
"hiel-excel-mcp" = "hiel_excel_mcp.server:app"

[tool.hatch.build.targets.wheel]
packages = ["hiel_excel_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "hiel_excel_mcp/",
    "README.md",
    "LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["hiel_excel_mcp"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "openpyxl.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=hiel_excel_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]